--- a/src/main/java/com/yossis/threadray/ui/javafx/view/ThreadRayLayout.fxml
+++ b/src/main/java/com/yossis/threadray/ui/javafx/view/ThreadRayLayout.fxml
@@ -4,8 +4,7 @@
 <?import javafx.scene.input.*?>
 <?import javafx.scene.layout.BorderPane?>
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0"
-            prefWidth="600.0" styleClass="background" stylesheets="@DarkTheme.css"
-            xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1"
+            prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1"
             fx:controller="com.yossis.threadray.ui.javafx.RootController">
     <top>
         <MenuBar BorderPane.alignment="CENTER">
