--- a/src/main/java/com/yossis/threadray/ui/javafx/view/ThreadRayRootLayout.fxml
+++ b/src/main/java/com/yossis/threadray/ui/javafx/view/ThreadRayRootLayout.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.layout.BorderPane?>
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0"
             prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="com.yossis.threadray.ui.javafx.RootController">
+            fx:controller="com.yossis.threadray.ui.javafx.ThreadRayRootController">
     <top>
         <MenuBar BorderPane.alignment="CENTER">
             <menus>
