--- a/src/main/java/com/yossis/threadray/ui/javafx/view/ThreadRayThreadsLayout.fxml
+++ b/src/main/java/com/yossis/threadray/ui/javafx/view/ThreadRayThreadsLayout.fxml
@@ -3,63 +3,53 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.Font?>
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.40"
+<AnchorPane prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8.0.65"
             xmlns:fx="http://javafx.com/fxml/1"
             fx:controller="com.yossis.threadray.ui.javafx.ThreadRayThreadsController">
     <children>
-        <SplitPane dividerPositions="0.29797979797979796" layoutX="100.0" layoutY="87.0" prefHeight="400.0"
+        <SplitPane dividerPositions="0.2993311036789298" layoutX="108.0" layoutY="95.0" prefHeight="400.0"
                    prefWidth="600.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0"
                    AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
             <items>
-                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
+                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="398.0" prefWidth="584.0">
                     <children>
-                        <ScrollPane fitToHeight="true" fitToWidth="true" hbarPolicy="ALWAYS" vbarPolicy="ALWAYS"
-                                    AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0"
-                                    AnchorPane.rightAnchor="-22.0" AnchorPane.topAnchor="0.0">
-                            <content>
-                                <TableView fx:id="threadsTable" prefHeight="400.0" prefWidth="200.0">
-                                    <columns>
-                                        <TableColumn fx:id="threadNameColumn" maxWidth="1000.0" prefWidth="100.0"
-                                                     text="Thread Name"/>
-                                    </columns>
-                                    <columnResizePolicy>
-                                        <TableView fx:constant="CONSTRAINED_RESIZE_POLICY"/>
-                                    </columnResizePolicy>
-                                </TableView>
-                            </content>
-                        </ScrollPane>
+                        <TableView fx:id="threadsTable" layoutX="-12.0" layoutY="59.0" prefHeight="398.0"
+                                   prefWidth="175.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0"
+                                   AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                            <columns>
+                                <TableColumn fx:id="threadStateColumn" prefWidth="75.0" text="State"/>
+                                <TableColumn fx:id="threadNameColumn" editable="false" maxWidth="500.0" minWidth="100.0"
+                                             prefWidth="200.0" sortable="false" text="Threads"/>
+                            </columns>
+                        </TableView>
                     </children>
                 </AnchorPane>
-                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0" styleClass="background">
+                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
                     <children>
-                        <Label layoutX="14.0" layoutY="14.0" styleClass="label-header" text="Selected Thread:"/>
-                        <GridPane layoutX="14.0" layoutY="61.0" prefWidth="295.0">
+                        <Label layoutX="14.0" layoutY="14.0" text="Summary">
+                            <font>
+                                <Font name="System Bold" size="12.0"/>
+                            </font>
+                        </Label>
+                        <GridPane layoutX="14.0" layoutY="39.0" prefHeight="78.0" prefWidth="389.0">
                             <columnConstraints>
-                                <ColumnConstraints hgrow="SOMETIMES" maxWidth="144.66665649414062" minWidth="10.0"
-                                                   prefWidth="111.33331298828125"/>
-                                <ColumnConstraints hgrow="SOMETIMES" maxWidth="183.66668701171875" minWidth="10.0"
-                                                   prefWidth="183.66668701171875"/>
+                                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
+                                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
                             </columnConstraints>
                             <rowConstraints>
                                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
                                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+                                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
                             </rowConstraints>
                             <children>
-                                <Label text="Name"/>
-                                <Label text="ID" GridPane.rowIndex="1"/>
-                                <Label fx:id="threadNameLabel" text="Label" GridPane.columnIndex="1"/>
-                                <Label fx:id="threadIdLabel" text="Label" GridPane.columnIndex="1"
-                                       GridPane.rowIndex="1"/>
+                                <Label text="Thread Count"/>
+                                <Label fx:id="threadsCountLabel" text="Label" GridPane.columnIndex="1"/>
                             </children>
                         </GridPane>
-                        <TextArea fx:id="threadDumpTextArea" editable="false" layoutX="14.0" layoutY="130.0"
-                                  prefHeight="260.0" prefWidth="200.0" AnchorPane.bottomAnchor="9.0"
-                                  AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="9.0"
-                                  AnchorPane.topAnchor="130.0">
-                            <font>
-                                <Font size="14.0"/>
-                            </font>
-                        </TextArea>
+                        <TextArea fx:id="threadDumpTextArea" editable="false" layoutX="14.0" layoutY="117.0"
+                                  prefHeight="271.0" prefWidth="404.0" AnchorPane.bottomAnchor="10.0"
+                                  AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="13.0"
+                                  AnchorPane.topAnchor="117.0"/>
                     </children>
                 </AnchorPane>
             </items>
